# rchat

./: Cargo.toml
chat_server/: Cargo.toml
chat_server/src/: error.rs  lib.rs
chat_server/src/models/: mod.rs
migrations/: 20240811150236_initial.sql
